@@ -20,3 +20,5 @@ DSTServer.sh 更新记录
 修复了MOD增删功能的错误
 # 2018-09-16 18:31:07 更新日志 433434
 修改Bug反馈链接为 https://wqlin.com/dstscript.html
+# 2018-09-26 22:48:55 更新日志 342142
+代码项目由Github迁移到Coding
